# GAMMCOR

./: .gitignore  CMakeLists.txt  LICENSE  MANUAL  MANUAL.md  Makefile  Makefile.common  Makefile.gcc  Makefile.gcc.omp  Makefile_save  README.md  README_Cmake.md  README_DEV.md  TO-DO-LIST  abfofo.mod  abmat.mod  accas.f  acfd.f  code_verify.py  config_gnu  config_intel  exd_pino.mod  exmisc.mod  gammcor_verify.bash  gammcor_verify.py  gammcor_verify.py_save  inputfill.mod  sapt_ener.mod  sapt_main.mod  sorter.mod  systemdef.mod  tatusq  timing.mod  tran.mod  types.mod
DALTON_PATCH/: dalgammcor.py  gammcor.F
MOLPRO_INTF/: dump_aoints.F90  grid_procedures.F90  user.F
MOLPRO_INTF/casvb/: serv_cvb.F
MOLPRO_INTF/multi/: muprop.F
MOLPRO_INTF/prdmft/: dump_aoints.F90  grid_procedures.F90  user.F
SOURCE/: C_integrator.f90  Cholesky.f90  CholeskyOTF.f90  Cholesky_old.f90  ab0fofo.f90  abchol.f90  abcipsi.f90  abfofo.f90  abmats.f90  ac_exact_2el.f  ac_exact_2el.f_27.06.2019  ac_fofo.f90  ac_fofo_min.f90  ac_iter.f  accas.f  acfd.f  acfd.f_03.08.2020  acfd.f_19.08.2020  acfd.f_22.07.2020  arithmetic.f90  berf.inc  big  blocktypes.f90  build_info.f90  caspidft.f  caspidft.f_08.05.2020  caspidft.f_18.09.2019  caspidft.f_save  cdft  clock.f90  commons.inc  compare_with_prdmft.py  constants.h  cpdmft.f  dberfda.inc  debug  dftacg_pw92c.f  dftfun_ecerf.f  dftfun_ecerfpbe.f  dftfun_exerf.f  (+86 more)
auto_test/: install-hooks.bash  post-merge.bash  pre-commit.bash  pre-push.bash  uninstall-hooks.bash
basis/: aug-cc-pVDZ  aug-cc-pVDZ-OPT  aug-cc-pVQZ  aug-cc-pVQZ-OPT  aug-cc-pVTZ-OPT  aug-cc-pVTZ_DALTON  cc-pV5Z-OPT  cc-pVDZ  cc-pVDZ-OPT  cc-pVQZ  cc-pVQZ-OPT  cc-pVQZ_DALTON  cc-pVTZ  cc-pVTZ-OPT  cc-pVTZ_DALTON
cmake/: AddCompileOptionsService.cmake  BLASConfig.cmake  BuildInfoService.cmake  CHOLESKYConfig.cmake  CommonFortranConfig.cmake  CustomTargets.cmake  FindTREXIO.cmake  GNUConfig.cmake  GetCPM.cmake  GitInfoService.cmake  InitialCacheParser.cmake  IntelConfig.cmake  MessageService.cmake  OpenMPConfig.cmake  SettingsService.cmake  SourceFilesList.cmake  TREXIOConfig.cmake  XCFunConfig.cmake
cmake/fortran/: build_info.f90  git_info.f90
testjobs/: run_tests.py
testjobs/AC0/ethene/: AOONEINT  AOTWOINT  FFOO  FOFO  SIRIFC  SIRIUS.RST  ethene.dal  ethene.mol  ethene.out  fort.55  fort.56  gammcor.out  input.inp  run_cas_dalton.py
testjobs/ACn/AR_CAS/: 2RDM  AOONEINT.mol  AOTWOINT.mol  MOLPRO.MOPUN  TEST_AC.out  ar.inp  ar.out  gammcor.out  input.inp
testjobs/ACn/AR_HF/: 2RDM  DIP  MOLPRO.MOPUN  TEST_AC.out  ar.inp  ar.out  gammcor.out  input.inp
testjobs/ACn/H2O_CAS/: gammcor.out  input.inp
testjobs/ACn/H2O_MOLMPS/: gammcor.out  input.inp
testjobs/RDMCORR/H2O_MOLMPS/: gammcor.out  input.inp
testjobs/SAPT/Dalton/TEST6/: AOONEINT_A  AOONEINT_B  AOTWOINT_A  SIRIFC_A  SIRIFC_B  SIRIUS_A.RST  SIRIUS_B.RST  SYMINFO_B  gammcor.out  input.inp  run_Dalton_GammCor.sh  template_A.mol  template_B.dal  template_B.mol
testjobs/SAPT/Dalton/TEST7/: AOONEINT_A  AOONEINT_B  AOTWOINT_A  SIRIFC_A  SIRIFC_B  SIRIUS_A.RST  SIRIUS_B.RST  SYMINFO_B  gammcor.out  input.inp  run_Dalton_PRDMFT.sh  template_A.dal  template_A.mol  template_A.out  template_B.dal  template_B.mol
testjobs/SAPT/QPackage/TEST1/: A.h5  B.h5  gammcor.out  input.inp
testjobs/scripts/: sapt_test_runner.py  test_list.py  test_runner.py  test_utils.py
trexio/: install.bash
xcfun/: Makefile  Makefile.common  Makefile.common.m100  Makefile.gcc  Makefile.gcc.m100  README.md  geninterface
xcfun/SAVE/: Makefile.common  Makefile.gcc  geninterface  testall
xcfun/SAVE/doc/.svn/: all-wcprops
xcfun/SAVE/doc/.svn/text-base/: xcfun_doc.html.svn-base
xcfun/SAVE/fortran/: a.out  xcfun_autogen.F90
xcfun/SAVE/fortran/.svn/: all-wcprops  entries
xcfun/SAVE/include/.svn/: all-wcprops  entries
xcfun/SAVE/src/.svn/: all-wcprops  entries
xcfun/SAVE/src/.svn/text-base/: geninterface.cpp.svn-base
xcfun/SAVE/src/functionals/.svn/: all-wcprops
xcfun/SAVE/src/taylor/.svn/: all-wcprops  entries
xcfun/SAVE/test/.svn/: all-wcprops  entries
xcfun/doc/.svn/: all-wcprops  entries
xcfun/fortran/: a.out  example.f90
xcfun/fortran/.svn/: all-wcprops
xcfun/include/.svn/: entries
xcfun/src/.svn/: all-wcprops  entries
xcfun/src/functionals/: m0xy_fun.h
xcfun/src/functionals/.svn/: entries
xcfun/src/functionals/.svn/text-base/: m06x2c.cpp.svn-base
xcfun/src/taylor/.svn/: entries
xcfun/test/.svn/: entries
xcfun_intel/: Makefile.common  geninterface  testall
xcfun_intel/SAVE/doc/.svn/: entries
xcfun_intel/SAVE/fortran/: srlda.F90  xcfun.mod  xcfun_autogen.mod  xcfun_module.F90
xcfun_intel/SAVE/include/: xcfun_autogen.h
xcfun_intel/SAVE/src/functionals/.svn/: entries
xcfun_intel/fortran/: xcfun_autogen.mod
xcfun_intel/fortran/.svn/: entries
